// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Close renders default close styling 1`] = `
<button
  className="c-callout__close "
  data-garden-id="notifications.close"
  data-garden-version="version"
  type="button"
/>
`;

exports[`Close state renders focused styling correctly 1`] = `
<button
  className="c-callout__close is-focused "
  data-garden-id="notifications.close"
  data-garden-version="version"
  type="button"
/>
`;

exports[`Close state renders hovered styling correctly 1`] = `
<button
  className="c-callout__close is-hovered "
  data-garden-id="notifications.close"
  data-garden-version="version"
  type="button"
/>
`;
